--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.80.6",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
