--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@tanstack/react-query": "^4.36.1",
+    "notistack": "^3.0.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
